--- a/healthy-security-core/pom.xml
+++ b/healthy-security-core/pom.xml
@@ -16,6 +16,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- SpringBoot 参数校验 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <!-- SpringBoot 热部署 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
