--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <healthy.security.version>1.0.0.RELEASE</healthy.security.version>
-        <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
-        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
+        <spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
         <spring.social.version>1.1.6.RELEASE</spring.social.version>
-        <hutool.version>5.3.0</hutool.version>
+        <hutool.version>5.5.7</hutool.version>
         <kaptcha.version>2.3.2</kaptcha.version>
     </properties>
     <!--子模块-->
@@ -47,17 +48,19 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- spring cloud alibaba -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
             <!--核心安全模块-->
             <dependency>
                 <groupId>com.healthy.security</groupId>
                 <artifactId>healthy-security-core</artifactId>
-                <version>${healthy.security.version}</version>
-            </dependency>
-            <!--RBAC管理模块-->
-            <dependency>
-                <groupId>com.healthy.security</groupId>
-                <artifactId>healthy-security-authorize</artifactId>
                 <version>${healthy.security.version}</version>
             </dependency>
             <!--浏览器安全模块-->
@@ -137,7 +140,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
