--- a/pom.xml
+++ b/pom.xml
@@ -110,30 +110,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    <!--阿里云镜像-->
-    <repositories>
-        <repository>
-            <id>public</id>
-            <name>AliYun nexus</name>
-            <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>public</id>
-            <name>AliYun nexus</name>
-            <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
     <!--构建工具-->
     <build>
         <plugins>
@@ -149,4 +125,28 @@
             </plugin>
         </plugins>
     </build>
+    <!--阿里云镜像-->
+    <repositories>
+        <repository>
+            <id>public</id>
+            <name>AliYun Nexus</name>
+            <url>https://maven.aliyun.com/repository/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>public</id>
+            <name>AliYun Nexus</name>
+            <url>https://maven.aliyun.com/repository/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
