--- a/healthy-security-core/pom.xml
+++ b/healthy-security-core/pom.xml
@@ -60,8 +60,8 @@
         </dependency>
         <!-- Mysql驱动包 -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
         <!--social 社交登录-->
         <dependency>
